# predictionarb

./: .gitignore  Cargo.toml  METRICS.md  README.md
app/: Cargo.toml
app/src/: config.rs  lib.rs  strategy.rs
docs/: recording.md
engine/: Cargo.toml
engine-core/: Cargo.toml
engine-core/src/: lib.rs  math.rs  model.rs  ports.rs  strategy.rs
engine/src/: auth.rs  config.rs  counter.rs  eip712_sign.rs  http_exchange.rs  http_pool.rs  lib.rs  metrics.rs  model.rs  oms.rs  order_builder.rs  order_types.rs  orders_integration.rs  runner.rs  strategy.rs  strategy_runner.rs  ws_activity.rs  ws_market.rs  ws_market_multi.rs  ws_parser.rs  ws_user.rs  ws_user2.rs  ws_user_combined.rs
polymarket/api/: typedefs.rs
polymarket/api/clob/: endpoints.rs  order_builder.rs  schemas.rs  typedefs.rs
polymarket/api/relayer/: common.rs  constants.rs  endpoints.rs  schemas.rs  tx_builder.rs
polymarket/api/user/: endpoints.rs  schemas.rs
registration/: mod.rs
tui/: Cargo.toml
tui/src/: arbitrage_demo.rs  local_store.rs  main.rs  ob_tui.rs  onboarding.rs  search_demo.rs  search_ob_tui.rs
tui/src/errors/: custom.rs
tui/src/polymarket/: mod.rs
tui/src/registration/: mod.rs
tui/src/search/: detail.rs  mod.rs
tui/src/tui/: mod.rs
tui/src/utils/: mod.rs
utils/: audit_log.rs  constants.rs  crypto.rs  log_collector.rs  logger.rs  misc.rs  poly.rs  task_manager.rs
