[workspace]
members = [
    "engine-core",
    "engine",
    "app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["polyrust"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","signal","sync","fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json","gzip","brotli","deflate","stream","http2","rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
dashmap = "5"
parking_lot = "0.12"
time = "0.3"
uuid = { version = "1", features = ["v4","serde"] }
url = "2"
flate2 = "1"
bytes = "1"
