[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
engine = { path = "../engine" }
alloy-signer-local = { version = "0.7", features = ["eip712"] }
async-trait = "0.1"
futures = { workspace = true }
tracing-subscriber = { workspace = true }
alloy-primitives = "0.8.12"
base64 = "0.21"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = "0.6"
sha2 = "0.10"
