[package]
name = "polyrust-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polyrustd"
path = "src/main.rs"

[[bin]]
name = "arb_demo"
path = "src/arbitrage_demo.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
engine = { path = "../engine" }
async-trait = "0.1"
rand = "0.8"
futures = { workspace = true }
url = { workspace = true }
reqwest.workspace = true
urlencoding = "2"
eyre = "0.6"
alloy-primitives = "0.8.12"
alloy-sol-types = { version = "0.8.12", features = ["eip712-serde", "json"] }
alloy-dyn-abi = "0.8.12"
alloy-signer = { version = "0.7", features = ["eip712"] }
alloy-signer-local = { version = "0.7", features = ["eip712"] }
const-hex = "1"
cookie = "0.18"
indexmap = "2"
serde_with = "3"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = { version = "0.17", features = ["tokio"] }
term_size = "0.3"
fake = "2.9"
rpassword = "7"
base64 = "0.21"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hmac = "0.12"
itertools = "0.12"
rand_core = "0.6"
sha2 = "0.10"
tracing-appender = "0.2"
age = { version = "0.10", features = ["armor"] }
uuid = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.29", features = ["bundled"] }

[[bin]]
name = "ob_tui"
path = "src/ob_tui.rs"

[[bin]]
name = "search_demo"
path = "src/search_demo.rs"

[[bin]]
name = "search_ob_tui"
path = "src/search_ob_tui.rs"

[dependencies.crossterm]
version = "0.27"
features = ["event-stream"]

[dependencies.ratatui]
version = "0.26"
